Fri Dec 11 00:15:57 UTC 2009  Mike Martinez  <martinez_m@ociweb.com>

        * tools/odds_monitor/MonitorData.cpp:

          remove_repo() - extended QString::toStdString() workaround to
                          this method.

        * tools/odds_monitor/MonitorDataStorage.inl:

          update<TransportReport>()
          update<DataWriterReport>()
          update<DataReaderReport>()
            - Initial implementations.

          Reformatted transport Id value display to be hexadecimal.

        * tools/odds_monitor/MonitorDataStorage.h:
        * tools/odds_monitor/MonitorDataStorage.cpp:

          getTransportNode() - removed redundant argument.

Thu Dec 10 23:16:19 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/transport/framework/DataLinkWatchdog_T.h:
        * dds/DCPS/transport/multicast/ReliableMulticast.cpp:

          Updated handshaking logic to trigger immediately (reduces delay
          when forming a new reservation between peers).

Thu Dec 10 22:45:18 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/transport/framework/DataLink.h:
        * dds/DCPS/transport/framework/DataLink.cpp:

          Refactored make_reservation to call new start_i callback
          when the first reservation is made.

        * dds/DCPS/transport/multicast/BestEffortMulticast.h:
        * dds/DCPS/transport/multicast/BestEffortMulticast.cpp:
        * dds/DCPS/transport/multicast/MulticastDataLink.h:
        * dds/DCPS/transport/multicast/MulticastDataLink.inl:
        * dds/DCPS/transport/multicast/MulticastDataLink.cpp:
        * dds/DCPS/transport/multicast/MulticastTransport.cpp:
        * dds/DCPS/transport/multicast/ReliableMulticast.h:
        * dds/DCPS/transport/multicast/ReliableMulticast.cpp:

          Updated to accomodate changes in DataLink; separating the
          watchdog scheduling from join was neccessary to prevent
          lost data during the initial handshake.
