@@ -14,6 +14,7 @@
 
 #include "MulticastDataLink.h"
 
+#include "dds/DCPS/DisjointSequence.h"
 #include "dds/DCPS/RandomGenerator.h"
 #include "dds/DCPS/transport/framework/DataLinkWatchdog_T.h"
 #include "dds/DCPS/transport/framework/TransportSendBuffer_rch.h"
@@ -24,7 +25,6 @@
 namespace OpenDDS {
 namespace DCPS {
 
-class DisjointSequence;
 class ReliableMulticast;
 
 class OpenDDS_Multicast_Export SynWatchdog
@@ -120,6 +120,9 @@ private:
   typedef std::pair<MulticastPeer, SequenceNumber> NakRequest;
   typedef std::multimap<ACE_Time_Value, NakRequest> NakRequestMap;
   NakRequestMap nak_requests_;
+
+  typedef std::multimap<MulticastPeer, DisjointSequence::range_type> NakPeerMap;
+  NakPeerMap nak_peers_;
 };
 
 } // namespace DCPS
