@@ -1,3 +1,10 @@
+Fri Dec 11 19:46:42 UTC 2009  Steven Stallion  <stallions@ociweb.com>
+
+        * dds/DCPS/transport/multicast/ReliableMulticast.h:
+        * dds/DCPS/transport/multicast/ReliableMulticast.cpp:
+
+          Added support for NAK suppression.
+
 Fri Dec 11 00:15:57 UTC 2009  Mike Martinez  <martinez_m@ociweb.com>
 
         * tools/odds_monitor/MonitorData.cpp:
